Backend/openshift/audit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audit-service
  namespace: ask-app
  labels:
    app: audit-service
spec:
  selector:
    app: audit-service
  ports:
    - name: http
      port: 8083
      targetPort: 8083
