Backend/openshift/audit/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: audit-service
  namespace: ask-app
  labels:
    app: audit-service
spec:
  to:
    kind: Service
    name: audit-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
